# cmocka_example

./: .gitignore  CMakeLists.txt  README.md
src/: user.c  user.h
test/: test_exception_handler.c  test_fixtures.c  test_mock.c
